- wirtschaft & managment colors added for hf, fh, ex - startdaten menu added in sidebar - benefit styling improved

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -107,9 +107,6 @@ body {
           body.segment_hs & {
             color: @pxl-color-hso-hs;
           }
-          body.segment_wm & {
-            color: @pxl-color-hso-wm;
-          }
           body.segment_sp & {
             color: @pxl-color-hso-sp;
           }
@@ -118,6 +115,18 @@ body {
           }
           body.segment_pp & {
             color: @pxl-color-hso-pp;
+          }
+          body.segment_wm & {
+            color: @pxl-color-hso-wm;
+          }
+          body.segment_wm.category_hf & {
+            color: @pxl-color-hso-hf;
+          }
+          body.segment_wm.category_fh & {
+            color: @pxl-color-hso-fh;
+          }
+          body.segment_wm.category_ex & {
+            color: @pxl-color-hso-ex;
           }
         }
 
