--- a/all/themes/pixelgarage/less/pxlComponents/node-benefit.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-benefit.less
@@ -25,7 +25,7 @@
         padding: 0;
         width: 20%;
         max-width: 35px;
-        vertical-align: top;
+        vertical-align: middle;
 
         .field-item {
           img {
@@ -42,7 +42,7 @@
         margin: 0 -2px;
         padding: 0 5px;
         width: 80%;
-        vertical-align: top;
+        vertical-align: middle;
 
         h2 {
           margin: 0;
@@ -50,6 +50,7 @@
           font-size: 15px;
           text-align: left;
           color: @text-color;
+          line-height: normal;
         }
       }
 
