--- a/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
+++ b/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
@@ -40,6 +40,8 @@
       }
 
       &.pane-custom {
+        margin: 0 auto;
+        max-width: @pxl-max-width-page;
         .panel-content {
           #pxl-mixins.wysiwyg-body;
         }
