--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -204,9 +204,6 @@
                 body.segment_hs & {
                   border: 1px solid @pxl-color-hso-hs;
                 }
-                body.segment_wm & {
-                  border: 1px solid @pxl-color-hso-wm;
-                }
                 body.segment_sp & {
                   border: 1px solid @pxl-color-hso-sp;
                 }
@@ -215,6 +212,18 @@
                 }
                 body.segment_pp & {
                   border: 1px solid @pxl-color-hso-pp;
+                }
+                body.segment_wm & {
+                  border: 1px solid @pxl-color-hso-wm;
+                }
+                body.segment_wm.category_hf & {
+                  border: 1px solid @pxl-color-hso-hf;
+                }
+                body.segment_wm.category_fh & {
+                  border: 1px solid @pxl-color-hso-fh;
+                }
+                body.segment_wm.category_ex & {
+                  border: 1px solid @pxl-color-hso-ex;
                 }
               }
             }
