--- a/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
@@ -46,9 +46,6 @@
       body.segment_hs & {
         .links(@pxl-color-hso-hs);
       }
-      body.segment_wm & {
-        .links(@pxl-color-hso-wm);
-      }
       body.segment_sp & {
         .links(@pxl-color-hso-sp);
       }
@@ -57,6 +54,18 @@
       }
       body.segment_pp & {
         .links(@pxl-color-hso-pp);
+      }
+      body.segment_wm & {
+        .links(@pxl-color-hso-wm);
+      }
+      body.segment_wm.category_hf & {
+        .links(@pxl-color-hso-hf);
+      }
+      body.segment_wm.category_fh & {
+        .links(@pxl-color-hso-fh);
+      }
+      body.segment_wm.category_ex & {
+        .links(@pxl-color-hso-ex);
       }
     }
   }
