--- a/all/themes/pixelgarage/less/pxlComponents/wysiwyg-templates.less
+++ b/all/themes/pixelgarage/less/pxlComponents/wysiwyg-templates.less
@@ -81,39 +81,6 @@ table.lektionplan {
     }
   }
 
-  body.segment_wm & {
-    .color-bg-20 {
-      background-color: rgba(124, 11, 37, 0.2);
-    }
-    .color-bg-25 {
-      background-color: rgba(124, 11, 37, 0.25);
-    }
-    .color-bg-33 {
-      background-color: rgba(124, 11, 37, 0.33);
-    }
-    .color-bg-40 {
-      background-color: rgba(124, 11, 37, 0.4);
-    }
-    .color-bg-50 {
-      background-color: rgba(124, 11, 37, 0.5);
-    }
-    .color-bg-60 {
-      background-color: rgba(124, 11, 37, 0.6);
-    }
-    .color-bg-66 {
-      background-color: rgba(124, 11, 37, 0.66);
-    }
-    .color-bg-75 {
-      background-color: rgba(124, 11, 37, 0.75);
-    }
-    .color-bg-80 {
-      background-color: rgba(124, 11, 37, 0.8);
-    }
-    .color-bg-100 {
-      background-color: rgba(124, 11, 37, 1);
-    }
-  }
-
   body.segment_sp & {
     .color-bg-20 {
       background-color: rgba(178, 204, 216, 0.2);
@@ -181,6 +148,138 @@ table.lektionplan {
   }
 
   body.segment_pp & {
+    .color-bg-20 {
+      background-color: rgba(123, 108, 101, 0.2);
+    }
+    .color-bg-25 {
+      background-color: rgba(123, 108, 101, 0.25);
+    }
+    .color-bg-33 {
+      background-color: rgba(123, 108, 101, 0.33);
+    }
+    .color-bg-40 {
+      background-color: rgba(123, 108, 101, 0.4);
+    }
+    .color-bg-50 {
+      background-color: rgba(123, 108, 101, 0.5);
+    }
+    .color-bg-60 {
+      background-color: rgba(123, 108, 101, 0.6);
+    }
+    .color-bg-66 {
+      background-color: rgba(123, 108, 101, 0.66);
+    }
+    .color-bg-75 {
+      background-color: rgba(123, 108, 101, 0.75);
+    }
+    .color-bg-80 {
+      background-color: rgba(123, 108, 101, 0.8);
+    }
+    .color-bg-100 {
+      background-color: rgba(123, 108, 101, 1);
+    }
+  }
+
+  body.segment_wm & {
+    .color-bg-20 {
+      background-color: rgba(124, 11, 37, 0.2);
+    }
+    .color-bg-25 {
+      background-color: rgba(124, 11, 37, 0.25);
+    }
+    .color-bg-33 {
+      background-color: rgba(124, 11, 37, 0.33);
+    }
+    .color-bg-40 {
+      background-color: rgba(124, 11, 37, 0.4);
+    }
+    .color-bg-50 {
+      background-color: rgba(124, 11, 37, 0.5);
+    }
+    .color-bg-60 {
+      background-color: rgba(124, 11, 37, 0.6);
+    }
+    .color-bg-66 {
+      background-color: rgba(124, 11, 37, 0.66);
+    }
+    .color-bg-75 {
+      background-color: rgba(124, 11, 37, 0.75);
+    }
+    .color-bg-80 {
+      background-color: rgba(124, 11, 37, 0.8);
+    }
+    .color-bg-100 {
+      background-color: rgba(124, 11, 37, 1);
+    }
+  }
+
+  body.segment_wm.category_hf & {
+    .color-bg-20 {
+      background-color: rgba(51, 85, 146, 0.2);
+    }
+    .color-bg-25 {
+      background-color: rgba(51, 85, 146, 0.25);
+    }
+    .color-bg-33 {
+      background-color: rgba(51, 85, 146, 0.33);
+    }
+    .color-bg-40 {
+      background-color: rgba(51, 85, 146, 0.4);
+    }
+    .color-bg-50 {
+      background-color: rgba(51, 85, 146, 0.5);
+    }
+    .color-bg-60 {
+      background-color: rgba(51, 85, 146, 0.6);
+    }
+    .color-bg-66 {
+      background-color: rgba(51, 85, 146, 0.66);
+    }
+    .color-bg-75 {
+      background-color: rgba(51, 85, 146, 0.75);
+    }
+    .color-bg-80 {
+      background-color: rgba(51, 85, 146, 0.8);
+    }
+    .color-bg-100 {
+      background-color: rgba(51, 85, 146, 1);
+    }
+  }
+
+  body.segment_wm.category_fh & {
+    .color-bg-20 {
+      background-color: rgba(63, 88, 104, 0.2);
+    }
+    .color-bg-25 {
+      background-color: rgba(63, 88, 104, 0.25);
+    }
+    .color-bg-33 {
+      background-color: rgba(63, 88, 104, 0.33);
+    }
+    .color-bg-40 {
+      background-color: rgba(63, 88, 104, 0.4);
+    }
+    .color-bg-50 {
+      background-color: rgba(63, 88, 104, 0.5);
+    }
+    .color-bg-60 {
+      background-color: rgba(63, 88, 104, 0.6);
+    }
+    .color-bg-66 {
+      background-color: rgba(63, 88, 104, 0.66);
+    }
+    .color-bg-75 {
+      background-color: rgba(63, 88, 104, 0.75);
+    }
+    .color-bg-80 {
+      background-color: rgba(63, 88, 104, 0.8);
+    }
+    .color-bg-100 {
+      background-color: rgba(63, 88, 104, 1);
+    }
+  }
+
+  body.segment_wm.category_ex & {
     .color-bg-20 {
       background-color: rgba(123, 108, 101, 0.2);
     }
