--- a/all/themes/pixelgarage/less/pxlComponents/view-banners.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-banners.less
@@ -36,28 +36,29 @@
 
           .views-field-field-body {
             font-family: @pxl-text-font-medium;
-            font-size: 24px;
+            #pxl-mixins.font-size-responsive(24px, 12px);
             color: white;
+            .left, .center, .right {
+              margin: 0;
+              padding: 10px;
+              width: 80%;
+
+              @media @tablet {
+                padding: 20px;
+                width: 35%;
+              }
+            }
 
             .left {
-              margin: 0;
-              padding: 20px;
-              width: 35%;
               text-align: left;
               #pxl-mixins.center-vertically(absolute);
               left: 10%;
             }
             .center {
-              margin: 0;
-              padding: 20px;
-              width: 35%;
               text-align: center;
               #pxl-mixins.center-xy(absolute);
             }
             .right {
-              margin: 0;
-              padding: 20px;
-              width: 35%;
               text-align: right;
               #pxl-mixins.center-vertically(absolute);
               right: 10%;
