--- a/all/themes/pixelgarage/less/pxlComponents/node-video.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-video.less
@@ -14,20 +14,18 @@
 // General settings
 // -------------------------
 .node.node-video.view-mode-teaser {
-  margin: 0 -50px;
-  padding: 20px 0;
+  margin: 0 -15px;
+  padding: 35px 15px;
   background-color: @pxl-color-hso-sec;
+
+  @media @tablet {
+    margin: 0 -50px;
+    padding: 35px 50px;
+  }
 
   .row {
     div.col-sm-6 {
-      padding: 15px 0;
-
-      &:first-child {
-        padding-right: 30px;
-      }
-      &:last-child {
-        padding-left: 30px;
-      }
+      padding: 0 @grid-gutter-width/2;
 
       .field-name-title {
         h2 {
@@ -39,20 +37,15 @@
       }
 
       .field-name-field-video {
-        padding-left: 100px;
-
         .field-item {
-          .file-video {
-            iframe {
-              width: 100%;
-            }
+          iframe {
+            width: 100% !important;
+            max-width: 100%;
           }
         }
       }
 
       .field-name-body {
-        padding-right: 100px;
-
         #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
         color: @pxl-color-gray-dark;
 
