--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -54,9 +54,15 @@
 
         .field-item {
           img {
-            width: 100%;
+            display: block;
+            margin: 0 auto;
+            width: 16%;
             height: auto;
             max-width: 100%;
+
+            @media @tablet {
+              width: 100%;
+            }
           }
         }
       }
