--- a/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
@@ -15,8 +15,9 @@
 .menu-name-menu-meta-menu.menu-level-2 {
   ul.menu {
     display: block;
-    margin: 50px 0 0;
+    margin: 50px auto 0;
     text-align: center;
+    max-width: @pxl-max-width-page;
 
     li {
       display: inline-block;
