--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -82,7 +82,7 @@ body {
     // Frames of: Page title, Messages, Admin tabs, Action links and Main content
     .row {
       section { // column(s)
-
+        /*
         body.node-type-page &,
         body.node-type-webform &,
         body.node-type-news & {
@@ -90,7 +90,7 @@ body {
           margin: 0 auto;
           max-width: @pxl-max-width-page;
         }
-
+        */
         h1.page-header {
           //display: none;
           margin: 60px auto 30px;
