--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -502,7 +502,7 @@ form.webform-client-form {
       label, input {
         display: block;
 
-        @media @narrow {
+        @media @tablet {
           display: inline-block;
         }
       }
@@ -512,7 +512,7 @@ form.webform-client-form {
         right: auto;
         width: 100%;
 
-        @media @narrow {
+        @media @tablet {
           position: absolute;
           right: 0;
           width: @webform-inline-input-width;
@@ -562,7 +562,7 @@ form.webform-client-form {
             }
           }
 
-          @media @narrow {
+          @media @tablet {
             position: absolute;
             right: 0;
             width: @webform-inline-input-width;
