--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -348,6 +348,7 @@
               a {
                 #pxl-mixins.button-normal;
                 display: inline-block;
+                margin: 3px 5px;
               }
             }
           }
