--- a/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
@@ -17,7 +17,7 @@
     display: block;
     margin: 50px auto 0;
     text-align: center;
-    max-width: @pxl-max-width-page;
+    //max-width: @pxl-max-width-page;
 
     li {
       display: inline-block;
