--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -183,7 +183,7 @@
             select {
               #pxl-mixins.no-appearance;
               padding: 0 25px 0 10px;
-              height: auto;
+              height: 30px;
               font-family: @pxl-text-font-light;
               font-size: @font-size-base;
               line-height: 1.2em;
