--- a/all/themes/pixelgarage/less/pxlComponents/node-benefit.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-benefit.less
@@ -24,14 +24,31 @@
         margin: 0 -2px;
         padding: 0;
         width: 20%;
-        max-width: 35px;
+        max-width: @pxl-sidebar-icon-width;
         vertical-align: middle;
 
         .field-item {
           img {
-            width: 100%;
+            width: 40px;
             height: auto;
             max-width: 100%;
+          }
+        }
+
+        @media @tablet {
+          max-width: @pxl-sidebar-icon-width-small;
+          .field-item {
+            img {
+              width: 30px;
+            }
+          }
+        }
+        @media @normal {
+          max-width: @pxl-sidebar-icon-width;
+          .field-item {
+            img {
+              width: 40px;
+            }
           }
         }
       }
@@ -44,13 +61,20 @@
         width: 80%;
         vertical-align: middle;
 
-        h2 {
+        p {
           margin: 0;
-          font-family: @pxl-text-font-medium;
+          font-family: @pxl-text-font-light;
           font-size: 15px;
           text-align: left;
           color: @text-color;
           line-height: normal;
+
+          @media @tablet {
+            font-size: 14px;
+          }
+          @media @normal {
+            font-size: 15px;
+          }
         }
       }
 
