--- a/all/themes/pixelgarage/less/pxlComponents/node-news.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-news.less
@@ -76,12 +76,14 @@
 .node.node-news.view-mode-full,
 .node.node-news.view-mode-default {
   margin: 50px auto 0;
-  border-top: 2px solid @pxl-border-color;
+
+  .page-news & {
+    padding: 20px 0 0;
+    border-top: 2px solid @pxl-border-color;
+  }
 
   .row {
-    div.col-sm-12 {
-      width: 100%;
-
+    div.col-sm-12, div.col-sm-8, div.col-sm-4 {
       .field-name-title {
         h2 {
           margin: 0;
@@ -112,14 +114,12 @@
       }
 
       .field-name-field-picture {
-        margin: 0 0 20px;
-
         .field-item {
           img {
             display: block;
             margin: 0 auto;
-            width: 80%;
-            max-width: 1280px;
+            width: 100%;
+            max-width: 100%;
             height: auto;
           }
         }
