--- a/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
@@ -37,8 +37,8 @@
 .view.view-segment-pages {
   .view-content {
     .views-row {
-      display: inline-block;
-      padding-right: 15px;
+      display: block;
+      padding: 0;
 
       body.segment_kv & {
         .links(@pxl-color-hso-kv);
